# cookieclicker_autoclicker

./: CHANGELOG.md  Makefile  README.md  setup.cfg  setup.py
src/cookieclicker_autoclicker/: __init__.py  cli.py  logger.py
