[metadata]
name=cookieclicker_autoclicker
version=1.0.0
url=https://github.com/eitchugo/cookieclicker_autoclicker
author=Hugo Cisneiros (Eitch)
author_email=eitch@naovouler.com.br
description=Automatically keeps clicking on cookie clicker and golden cookies
long_description=file:README.md
long_description_content_type=text/markdown
license_files = LICENSE
classifiers=
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only

[options]
zip_safe=true
install_requirements=
    pyautogui==0.9.54
    opencv-python==4.10.0.84
    pillow==10.4.0

[pycodestyle]
max-line-length = 120

[flake8]
max-line-length = 120
